--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -20,6 +20,16 @@ html, body {
     float: left;
     width: 487px;
 }
+.content .column .table-nav{
+    width: 100%;
+}
+.content .column .more{
+    padding-right: 50px;
+}
+.content .column table{
+    width: 477px;
+    margin: 0 5px;
+}
 
 /*
     artist grid
@@ -60,13 +70,29 @@ html, body {
 /*
     tables
 */
-.index {
-    width: 20px;
+table {
+    border: 0;
+    border-collapse: collapse;
+    width: 100%;
 }
-
+td {
+    padding: 0;
+}
+tr {
+    height: 30px;
+}
 .table-nav {
     display: block;
     clear: both;
+}
+td.index {
+    width: 40px;
+}
+tr.even {
+    background-color: white;
+}
+tr.odd {
+    background-color: #E0E0E0;
 }
 .table-nav .title {
     float: left;
@@ -74,6 +100,15 @@ html, body {
 }
 .table-nav #previous, #current, #next {
     float: right;
-    margin-left: 30px;
+    padding-left: 30px;
     margin-top: 9px;
+}
+.info {
+    display: block;
+}
+.main {
+    float: left;
+}
+.secondary {
+    float: right;
 }
