--- a/templates/top-artists.html
+++ b/templates/top-artists.html
@@ -53,23 +53,12 @@
     
 </div><!--END nav -->
 
+
 <!-- dir -->
-<div class="dir">
-    <div class="title">
-        top artists /
-    </div>
-
-    <div class="subtitle">
-        <div id="profile-location">
-            {{ profile.location }}
-        </div>
-        <div id="profile-genres">
-            {% for genre in profile.genres %}
-                {{ genre }}
-            {% endfor %}
-        </div>
-    </div>
-
+<div class="dir content">
+    <span class="title">
+        top artists
+    </span>
 
 </div><!--END dir -->
 
@@ -77,16 +66,15 @@
 <hr>
 
 
-
 <!-- content -->
-<div class="content bbb">
+<div class="content">
     <table id="content-table">
 
         <tbody id="content-tbody">
             {% for item in content.data %}
-                <tr>
-                    <td>
-                        {{ forloop.counter0|add:content.offset }}
+                <tr class="{% cycle 'even' 'odd' %}">
+                    <td class="index">
+                        {{ forloop.counter0|add:content.offset }}.
                     </td>
                     <td>
                         <a href = "/music/{{ item.name|space_to_plus }}/" >{{ item.name }}</a>
